fixed last note not fully visible if sidebar height is over 100vh

--- a/src/index.css
+++ b/src/index.css
@@ -179,6 +179,7 @@ body {
 .note.selected .note-inside,
 .note.above-selected .note-inside {
   border: none;
+  padding-bottom: 7px;
 }
 
 .note-title, .note-date, .note-snippet {
